--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "metaverse13",
+  "name": "planet13",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "export": "npm run build && next export -o _static"
